fix width topbarapp when drawwer is open to avoid content overflow screen app size

--- a/examples/royale/JewelExample/src/main/resources/jewel-example-styles.css
+++ b/examples/royale/JewelExample/src/main/resources/jewel-example-styles.css
@@ -57,12 +57,13 @@
 }
 
 .wrapper {
-    outline: 0px dashed navy;
+    /* outline: 0px dashed navy; */
 }
 
 .box {
     background: #dedede;
-    border-radius: 5px;
-    padding: 10px;
-    outline: 1px dashed navy;
+    border-radius: 3px;
+    padding: 12px;
+    color: white;
+    /* outline: 1px dashed navy; */
 }
