--- a/frameworks/projects/Jewel/src/main/sass/components/_topappbar.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_topappbar.sass
@@ -38,11 +38,6 @@ $top-app-bar-button-size: 48px
         &.fixed
             transition: box-shadow 200ms linear
 
-// this adjust the container declared after TopAppBar and with only one row (most common case)
-// used by ApplicationMainContent 
-.has-topappbar
-    padding-top: $top-app-bar-row-height !important
-
 .jewel.topappbarrow 
     display: flex
     position: relative
